# ecc

./: .codacy.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-c.sh  build-ios.sh  build-js.sh  build-jvm.sh  sonar-project.properties
.github/workflows/: android.yml  c.yml  ci.yml  ios.yml  javascript.yml  js.yml  linux.yml  macos.yml  sonarcloud.yml  sonarcloud.yml.bak  windows.yml
bindings/: gen_code.py
bindings/js/: README.md  aead.js  aead.test.js  bls12_381.test.js  ed25519.test.js  hash.js  hash.test.js  index.js  kdf.js  kdf.test.js  libecc-post.js  libecc.js  mac.test.js  opaque.js  opaque.test.js  oprf.js  oprf.test.js  package-lock.json  package.json  sign.test.js  util.js  util.test.js
bindings/jvm/: build.gradle  libecc-jvm.dylib  libecc.c  settings.gradle
bindings/jvm/src/main/java/: overview.html
bindings/jvm/src/main/java/org/ssohub/crypto/ecc/: Aead.java  BaseData.java  Data.java  DataLike.java  Hash.java  Kdf.java  Opaque.java  Oprf.java  Pre.java  Util.java  libecc.java
bindings/jvm/src/main/java/org/ssohub/crypto/ecc/opaque/: ClientFinishResult.java  ClientInputs.java  ClientState.java  CreateRegistrationRequestResult.java  FinalizeRegistrationRequestResult.java  GenerateAuthKeyPairResult.java  KE1.java  KE2.java  KE3.java  Opaque.java  OpaquePk.java  OpaqueSeed.java  OpaqueSk.java  RegistrationRecord.java  RegistrationRequest.java  RegistrationResponse.java  ServerFinishResult.java  ServerInputs.java  ServerState.java
bindings/jvm/src/main/java/org/ssohub/crypto/ecc/ristretto255/: R255Element.java  R255Scalar.java
bindings/jvm/src/test/java/org/ssohub/crypto/ecc/: AeadTest.java  Bls12381Test.java  HashTest.java  KdfTest.java  OpaqueTest.java  OprfTest.java  PreTest.java  UtilTest.java
bindings/jvm/src/test/java/org/ssohub/crypto/ecc/opaque/: OpaqueTest.java
bindings/python/: README.md  cffi_build.py  setup.cfg
bindings/python/src/libecc/: __init__.py  libecc.py
bindings/python/tests/: __init__.py  test_util.py
c/: export.h  hash.c  hash.h
c/test/: hash_test.c
cmake/: FetchCmocka.cmake
cmake/Modules/: FetchCmocka.cmake  code-coverage.cmake
examples/oprf/: app.js  package-lock.json  package.json
examples/oprf/public/: ecc.min.js  index.html  oprf.min.js
js/: ed25519.test.js  hash-post.js  mac.test.js  opaque.js  package-lock.json  pre.js  pre.test.js
js/ecc/: README.md  bls12_381.test.js  ecc.test.js  ed25519.test.js  hash.test.js  index.js  kdf.test.js  libecc-post.js  libecc.js  mac.test.js  opaque.test.js  oprf.js  oprf.test.js  package-lock.json  package.json  sign.test.js  util.js  util.test.js  webpack.config.cjs
js/hash/: package.json  test.js
js/opaque/: LICENSE  README.md  index.js  libopaque-post.js  libopaque.js  opaque.js  opaque.test.js  package-lock.json  package.json  tsconfig.json  util.js  webpack.config.cjs
js/oprf/: README.md  index.js  liboprf-post.js  liboprf-pre.js  liboprf.js  oprf.js  oprf.test.js  package-lock.json  package.json  util.js  webpack.config.cjs
jvm/: build.gradle  libecc.c
jvm/src/main/java/org/ssohub/crypto/ecc/: Opaque.java  Util.java  libecc.java
jvm/src/test/java/org/ssohub/crypto/ecc/: Bls12381Test.java  H2cTest.java  OpaqueTest.java  UtilTest.java
src/: aead.c  aead.h  bls12_381.c  bls12_381.h  ecc.c  ecc.h  ed25519.c  ed25519.h  export.h  frost.c  frost.h  h2c.c  h2c.h  h2ec.c  h2ec.h  hash.c  hash.h  kdf.c  kdf.h  mac.c  mac.h  opaque.c  opaque.h  oprf.c  oprf.h  pre.c  pre.h  ristretto255.c  ristretto255.h  scalarmult.c  scalarmult.h  sign.c  sign.h  util.c  util.h  voprf.c  voprf.h
test/: cJSON.h  ecc_log.h  ecc_test.c  ecc_test.h  test_aead.c  test_bls12_381.c  test_ed25519.c  test_frost.c  test_h2c.c  test_h2ec.c  test_hash.c  test_json.c  test_kdf.c  test_mac.c  test_opaque.c  test_oprf.c  test_pre.c  test_ristretto255.c  test_sign.c  test_util.c  test_util.h  test_voprf.c
test/data/: read_json_test.json
test/data/aead/: chacha20poly1305.json
test/data/h2c/: expand_message_xmd_sha256.json  expand_message_xmd_sha512.json
test/data/hash/: sha2.json  sha256.json  sha512.json
test/data/kdf/: hkdf_sha256.json
test/data/mac/: hmac_sha2.json
test/data/opaque/: ristretto255_sha512.json
test/data/voprf/: ristretto255_sha512_oprf.json  ristretto255_sha512_poprf.json  ristretto255_sha512_voprf.json
tools/: ast-dump.sh  parse_ast.py
