[metadata]
name = libecc
version = 0.0.1
author = Alden Torres
author_email = aldenml@gmail.com
description = elliptic curves crypto functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aldenml/ecc
project_urls =
    Bug Tracker = https://github.com/aldenml/ecc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
libecc = *.so
