[metadata]
name = libecc
version = 1.0.8
author = Alden Torres
author_email = aldenml@gmail.com
description = elliptic curves crypto functions
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/aldenml/ecc
project_urls =
    Bug Tracker = https://github.com/aldenml/ecc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Security :: Cryptography
keywords =
    elliptic
    curves
    crypto
    hash
    sha256
    sha512
    ed25519
    ristretto255
    bls12-381
    oprf
    opaque
    pake
    apake
    authentication
    bls-signature
    ethereum
    proxy-re-encryption

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
libecc = *.so
